fix acc-sale horizontal scroll

--- a/app/blocks/account-propose-popup/account-propose-popup.scss
+++ b/app/blocks/account-propose-popup/account-propose-popup.scss
@@ -12,6 +12,7 @@
   background-color: $color-dark-blue;
   box-shadow: 0 0 35px rgba(9, 4, 53, .3);
   border-radius: 3px;
+  z-index: 999;
 
   &::before {
     content: '';
